[package]
name = "build-n-run"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
ignore = "0.4.20"
strum = { version = "0.24.1", features = ["derive"] }
clap = { version = "3.2.23", features = ["derive"] }
